# rust-java-rest

./: .gitignore  CHANGELOG.md  MEMORY.md  README.md  RELEASE_NOTES.md  pom.xml  start-30mb.bat
benchmark/: Dockerfile.benchmark  benchmark.sh  benchmark_local.sh  benchmark_post.lua  docker-compose.benchmark.yml  run_benchmark.sh
docker/: README.md  benchmark.sh  build-images.sh  docker-compose.yml
docker/rust-java-rest/: Dockerfile  Dockerfile.local
docker/rust-spring-perf/: Dockerfile
docker/spring-boot-standard/: Dockerfile  Dockerfile.local
docs/: production-runtime.md
docs/release-notes/: v3.1.0-rc1.md
rust-java-rest/: README.md  pom.xml
rust-java-rest/src/main/resources/: rust-spring.properties
rust-java-rest/src/main/resources/container/: config.json
rust-spring/: Cargo.toml  Dockerfile.build
rust-spring-boot/: README.md  pom.xml
rust-spring-boot/src/main/java/com/reactor/rust/: ReactorRustHyperApplication.java
rust-spring-boot/src/main/resources/container/: Dockerfile
rust-spring/src/: lib.rs
src/main/resources/: rust-spring.properties
src/main/resources/container/: Dockerfile  Dockerfile.distroless  Dockerfile.minimal  Dockerfile.optimized  Dockerfile.ultra
test/: BENCHMARK_RESULTS.md  benchmark.ps1  benchmark.sh  compare-apis.sh  docker-wrk-benchmark.sh  high-concurrency-benchmark.sh  load-test-wrk.sh  load-test.sh  local-run.sh  run-profiling-tests.sh  run-profiling.sh  simple-benchmark.sh  simple-test.sh  test.ps1  test.sh  wrk-benchmark.sh
test/profiling/: BOTTLENECK_ANALYSIS.md  ProfilingTests.java  StandaloneProfiling.java
(+199 files in other folders)
